--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "flight-counter",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "devDependencies": {
     "generator-flight": "~0.7.3",
-    "gulp": "~3.4.0",
-    "gulp-livereload": "~0.2.0",
-    "requirejs": "~2.1.11",
-    "karma": "~0.10.0",
-    "karma-jasmine": "~0.1.0",
-    "karma-requirejs": "~0.2.1",
-    "karma-chrome-launcher": "~0.1.0",
-    "karma-ie-launcher": "~0.1.1",
+    "gulp": "^3.9.0",
+    "gulp-livereload": "^3.8.0",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.8",
+    "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "~0.1.0",
-    "karma-phantomjs-launcher": "~0.1.0",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-requirejs": "~0.2.1",
     "karma-safari-launcher": "~0.1.1",
     "node-static": "~0.7.3",
-    "tiny-lr": "0.0.5"
+    "phantomjs": "^1.9.17",
+    "requirejs": "~2.1.11",
+    "tiny-lr": "^0.1.6"
   },
   "scripts": {
     "livereload": "gulp",
